--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
-    "rollup-plugin-flow": "^1.1.1"
+    "folktale": "^2.0.1",
+    "hasha": "^3.0.0",
+    "lodash": "^4.17.4",
+    "ramda": "^0.25.0",
+    "rollup-plugin-flow": "^1.1.1",
+    "superagent": "^3.8.2"
   },
   "devDependencies": {
     "babel-cli": "^6.16.0",
